# trustchain-superapp

./: != null)   .editorconfig  .gitignore  .gitmodules  AppTutorial.md  Export flame chart data.trace  README.md  ROADMAP.md  benchMarkFinal1.trace  build.gradle  gradle.properties  report.md  settings.gradle  tmp.kek
.github/ISSUE_TEMPLATE/: weekly-task.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: android.yml  apk.yml  apk_debug.yml  apk_main.yml  apk_pr.yml  build.yml  check.yml  debug.yml  test.yml
FOC/: README.md  build.gradle
app/: build.gradle  build.keystore  google-services.json
app/src/: README-eurotoken-payment-request.md
atomic-swap/: README.md  build.gradle
common/: README.md  build.gradle
common-bitcoin/: build.gradle
common-ethereum/: build.gradle
currencyii/: .gitignore  README.md  build.gradle
currencyii/docs/: shared-wallet-message-types.md  shared-wallet-protocol.md
data-vault/: build.gradle
debug/: build.gradle
demo-android/: .gitignore  build.gradle
demo-jvm/: build.gradle
detoks/: README.md  build.gradle
detoks-engine/: README.md  build.gradle
detoks-uvt/: build.gradle  report.md
detoks/tracker/: index.js  package-lock.json  package.json  tor.py  tor_test.py
distributedai/: build.gradle
distributedai/docs/: README.md
doc/: AppTutorial.md  Community.md  DiscoveryCommunity.md  INDEX.md  NAT Puncturing.md  OverlayTutorial.md  Serialization.md  TrustChainCommunity.md  TrustChainTutorial.md
doc/BlockchainNetworkingProject/: Benchmarking.md  UtpTesting.md
doc/CurrencyII/: shared-wallet-protocol.md
docker/: README.md  add_bitcoin.sh  add_ethereum.sh  docker-compose.yml
eurotoken/: README.MD  README.md  build.gradle  web-of-trust.md
freedomOfComputing/: README.md  build.gradle
frost/: build.gradle
geth-android/: build.gradle
gossipML/: README.md  build.gradle  proguard-rules.pro
gossipML/src/main/cpp/: CMakeLists.txt  essentia_jni.cpp
ig-ssi/: build.gradle
ipv8/: build.gradle
ipv8-android/: build.gradle
ipv8-jvm/: build.gradle
liquidity-pool/: .gitignore  README_GROUP1.md  README_old.md  build.gradle  readme.md  readme_2_2.md
literaturedao/: README.md  build.gradle
musicdao/: build.gradle  proguard-rules.pro
musicdao-datafeeder/: build.gradle
offlinedigitaleuro/: README.md  build.gradle
offlinemoney/: build.gradle
p2playstore/: build.gradle
peerai/: build.gradle
peerchat/: build.gradle
tracker/: build.gradle
trader/: readme.md
trustchain-explorer/: build.gradle
trustchain-payloadgenerator/: build.gradle  readme.md
trustchain-trader/: build.gradle  readme.md
trustchain-voter/: README.md  build.gradle
util/: .gitignore  Dockerfile  communitysim.py  detoks_community.py  docker-compose.yml  ec0.pem  ec1.0.pem  ec1.pem  ec2.pem  ec_multichain.pem  messages.py  profile_generator.py  readme.md  requirements.txt
util/keys/: ec0.pem  (+4 more)
valuetransfer/: README.md  build.gradle
voting/: README.md
(+3221 files in other folders)
